<resources>
    <string name="app_name">MCDA5550-Hotel-Reservation-App</string>
    <string name="welcome_message">Welcome to Hotel Reservation System</string>
    <string name="hotel_search_title_text">Search Hotels</string>
    <string name="check_in_date_label">Check In Date:</string>
    <string name="check_out_date_label">Check Out Date:</string>
    <string name="number_of_guests_label">Number Of Guests:</string>
    <string name="search_button_text">Search</string>
    <string name="back_button_text">Back</string>
    <string name="guests_count_hint">Guests Count</string>
    <string name="primary_guest_name_label">Enter your Name</string>
    <string name="primary_guest_name_hint">Your Name</string>
    <string name="reservation_success_message">Congratulations !!!\nYou have successfully made a reservation.\nYour confirmation number is:</string>
</resources>