<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- WELCOME TEXT -->
            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hotel_search_title_text"
                android:textSize="30sp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-black"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:background="@color/brown_with_transparency"
                android:paddingVertical="20dp"/>

            <!-- CHECK IN DATE LABEL -->
            <TextView
                android:id="@+id/check_in_date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_in_date_label"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/title_text_view"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/white"
                android:fontFamily="sans-serif"
                android:textAlignment="textStart"
                android:gravity="start"
                android:padding="20px"
                android:background="@color/label_color"/>

            <!-- CHECK IN DATE - DATE PICKER -->
            <DatePicker
                android:id="@+id/check_in_date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarTextColor="@android:color/white"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/check_in_date_text_view"
                app:layout_constraintTop_toBottomOf="@id/check_in_date_text_view"
                android:background="@color/cardview_light_background"/>

            <TextView
                android:id="@+id/check_out_date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_out_date_label"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/check_in_date_picker"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/white"
                android:fontFamily="sans-serif"
                android:textAlignment="textStart"
                android:gravity="start"
                android:padding="20px"
                android:background="@color/label_color"/>

            <!-- CHECK OUT DATE - DATE PICKER -->
            <DatePicker
                android:id="@+id/check_out_date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/check_out_date_text_view"
                app:layout_constraintStart_toStartOf="@id/check_out_date_text_view"
                android:layout_marginTop="10dp"
                android:background="@color/cardview_light_background"
                />

            <!-- GUEST COUNT - LABEL -->
            <TextView
                android:id="@+id/guests_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_guests_label"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/check_out_date_picker"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="25dp"
                android:textColor="@color/white"
                android:fontFamily="sans-serif"
                android:textAlignment="textStart"
                android:gravity="start"/>

            <!-- GUEST COUNT - SELECTOR -->
            <EditText
                android:id="@+id/guests_count_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="18dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/white_background"
                android:hint="Guests Count"
                android:inputType="number"
                android:paddingHorizontal="12dp"
                android:paddingVertical="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/guests_label_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guests_label_text_view"
                app:layout_constraintTop_toTopOf="@+id/guests_label_text_view" />

            <!-- GUEST NAME - LABEL -->
            <TextView
                android:id="@+id/guest_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/guests_label_text_view"
                app:layout_constraintTop_toBottomOf="@id/guests_label_text_view"
                android:text="Enter Your Name"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:fontFamily="sans-serif"
                android:textAlignment="textStart"
                android:gravity="start"
                android:layout_marginTop="10dp"/>

            <!-- GUEST NAME - TEXT FIELD -->
            <EditText
                android:id="@+id/guest_name_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="30dp"
                android:background="@drawable/white_background"
                android:hint="Your Name"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingVertical="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/guest_name_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guest_name_text_view"
                app:layout_constraintTop_toTopOf="@+id/guest_name_text_view" />

            <!-- SEARCH BUTTON -->
            <Button
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_button_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="100dp"
                app:layout_constraintTop_toBottomOf="@id/guest_name_edit_text"/>

            <!-- Space below the button for convenience-->
            <Space
                android:id="@+id/app_end_space"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                app:layout_constraintTop_toBottomOf="@id/search_button"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>